--- a/Tercero/Programacion Concurrente/Practica_3/2.md
+++ b/Tercero/Programacion Concurrente/Practica_3/2.md
@@ -8,7 +8,7 @@
         int sleep = 0;
         int count = 0;
 
-        procedure in(x){
+        procedure in(){
           if(count < 6){
             count ++;
           }else{
@@ -17,11 +17,18 @@
           }
         }
 
-        procedure out(x){
+        procedure out(){
           if(count < 6){
             count --;
           }else{
             sleep --;
             signal(queue);
           }
+        }
+
+
+        Process users[1..N]{
+          db.in();
+          //use DB
+          db.out():
         }
