--- a/Tercero/Programacion Concurrente/Practica_3/2.md
+++ b/Tercero/Programacion Concurrente/Practica_3/2.md
@@ -1,7 +1,4 @@
-##2
-
-#### Implementar el acceso a una base de datos de solo
-#### lectura que puede atender a lo sumo 5 consultas simultáneas.
+#### 2. Implementar el acceso a una base de datos de solo lectura que puede atender a lo sumo 5 consultas simultáneas.
 
       monitor DB
         condition queue;
