--- a/Tercero/Programacion Concurrente/Practica_3/2.md
+++ b/Tercero/Programacion Concurrente/Practica_3/2.md
@@ -1,6 +1,4 @@
-##2
-
-#### Implementar el acceso a una base de datos de solo
+#### 2. Implementar el acceso a una base de datos de solo
 #### lectura que puede atender a lo sumo 5 consultas simultáneas.
 
       monitor DB
