Added groupp number

--- a/Tercero/Programacion_Concurrente/Practica_3/5.md
+++ b/Tercero/Programacion_Concurrente/Practica_3/5.md
@@ -3,20 +3,26 @@
 
       Monitor Group{
         condition queue;
+        groupNumber = 1;
         cant = 0;
 
-        Procedure in(){
+        Procedure in(var p){
           if(cant < 4){
             cant ++;
+            p = groupNumber;
             wait(queue);
           }else{
             cant = 0;
+            p = groupNumber;
+            groupNumber ++;
             singnalAll(queue);
           }
         }
       }
 
+
       Process employees[1..50]{
-        Group.in();
+        int p;
+        Group.in(p);
         //checking
       }
